@@ -1,0 +1,13 @@
+K 10
+svn:author
+V 7
+alexeyv
+K 8
+svn:date
+V 27
+2007-01-25T08:07:16.953125Z
+K 7
+svn:log
+V 30
+project witha custom Rake task
+END
